--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 
   {% else %}
     <h1 class="mb-4">Bienvenido a MiniBlog</h1>
-    <p class="lead">MiniBlog es una app estilo Instagram, donde podés compartir tus ideas, fotos, o lo que quieras.</p>
+    <p class="lead">MiniBlog es una app donde podés compartir tus ideas, fotos.</p>
     <p>Para empezar a publicar y ver el contenido completo, primero registrate o iniciá sesión.</p>
     <p>Mientras tanto, podés navegar y ver las publicaciones públicas que ya están disponibles.</p>
 
