--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Inicio de sesion{% endblock %}
+{% block title %}ElFace - Log In{% endblock %}
 
 {% block content %}
 <h2 class="mb-4">Inicio de sesion</h2>
