--- a/templates/nuevoPost.html
+++ b/templates/nuevoPost.html
@@ -1,24 +1,24 @@
 {% extends "base.html" %}
 
-{% block title %}Crear nuevo posteo{% endblock %}
+{% block title %}ElFace - NewPost{% endblock %}
 
 {% block content %}
 <div class="container mt-5">
     <h1 class="mb-4">Crear nuevo posteo</h1>
 `
     <form action="{{ url_for('nuevo_post') }}" 
-          method="POST" 
-          enctype="multipart/form-data" 
-          class="bg-white p-4 rounded shadow-sm">
+        method="POST" 
+        enctype="multipart/form-data" 
+        class="bg-white p-4 rounded shadow-sm">
         
         <div class="mb-3">
             <label for="titulo" class="form-label">Título</label>
-            <input type="text" id="titulo" name="titulo" class="form-control" placeholder="Escribí un título llamativo" required>
+            <input type="text" id="titulo" name="titulo" class="form-control" placeholder="Escribí un título" required>
         </div>
 
         <div class="mb-3">
             <label for="contenido" class="form-label">Contenido</label>
-            <textarea id="contenido" name="contenido" rows="5" class="form-control" placeholder="Contanos tu historia..." required></textarea>
+            <textarea id="contenido" name="contenido" rows="5" class="form-control" placeholder="Expresá lo que sientas..." required></textarea>
         </div>
 
         <div class="mb-3">
