--- a/templates/register.html
+++ b/templates/register.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Registrar Usuario{% endblock %}
+{% block title %}ElFace - Sing Up{% endblock %}
 
 {% block content %}
-<h2 class="mb-4">Registro de Usuario</h2>
+<h2 class="mb-4"></h2>
 
 <form method="POST" class="bg-white p-4 rounded shadow-sm" style="max-width: 500px;">
   
